force-app/main/default/objects/Doc_Topic__c/Doc_Topic__c.object-meta.xml
<CustomObject>
    <label>Doc_Topic</label>
    <nameField>
        <label>Doc_Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc_Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>