force-app/main/default/objects/Doc_Topic__c/fields/Doc_Description__c.field-meta.xml
<CustomField>
    <fullName>Doc_Description__c</fullName>
    <label>Doc_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>