force-app/main/default/objects/Doc_Topic__c/fields/Doc_Order__c.field-meta.xml
<CustomField>
    <fullName>Doc_Order__c</fullName>
    <label>Doc_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>