force-app/main/default/objects/Doc_Topic__c/fields/Type_of_Doc__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Doc__c</fullName>
    <label>Type of Doc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org Setup</fullName>
            </value>
            <value>
                <fullName>Making Metadata Changes</fullName>
            </value>
            <value>
                <fullName>Common Changes</fullName>
            </value>
            <value>
                <fullName>Running Quality Gates</fullName>
            </value>
            <value>
                <fullName>Deploying Changes</fullName>
            </value>
            <value>
                <fullName>Copado Docs and Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>